--- a/style.css
+++ b/style.css
@@ -22,14 +22,114 @@ nav .icon {
 }
 
 .ticket-container {
-  background-color: red;
-  width: 400px;
+  width: 350px;
   margin: 50px auto !important;
 }
 
+.ticket-container .tickets {
+  display: flex;
+  align-items: center;
+  overflow-x: ellipsis;
+  overflow-x: scroll;
+  padding: 20px 0px !important;
+  margin: 20px 0px !important;
+}
+
 .ticket-container .ticket {
-  width: 320px;
-  background-color: blue;
+  min-width: 300px;
+  margin: 0px 20px 0px 0px !important;
+  background-color: white;
   border-radius: 15px;
   text-align: center;
+}
+
+.ticket-nav {
+  background-color: #155fc8;
+  padding: 10px !important;
+  color: white;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.ticket-nav2 {
+  background-color: #026cdf;
+  color: white;
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  padding: 10px 25px !important;
+}
+
+.image-container {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9)),
+    url("images/ticket-img.jpg");
+  height: 168px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-repeat: cover;
+  background-size: 100%;
+  position: relative;
+}
+
+.image-container div {
+  position: absolute;
+  width: 100%;
+  color: white;
+  bottom: 10px;
+}
+
+.image-container div .tour {
+  font-size: 19px;
+}
+
+.image-container div .date {
+  font-size: 15px;
+}
+
+.ticket-container .verified {
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+section {
+  background-color: white;
+  padding: 50px 30px 0px !important;
+}
+
+section div {
+  margin: 20px 0px !important;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+section a {
+  text-decoration: none;
+  color: #026cdf;
+}
+
+.btn-containetr {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+}
+
+.btn-containetr button {
+  flex: 1;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.transfer-btn {
+  background-color: #026cdf;
+  color: white;
+  padding: 5px 10px !important;
+  margin-right: 10px !important;
+}
+
+.sell-btn {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: white;
+  padding: 5px 10px !important;
 }
