--- a/style.css
+++ b/style.css
@@ -133,3 +133,121 @@ section a {
   color: white;
   padding: 5px 10px !important;
 }
+
+#bg {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0px;
+  left: 0px;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: 0.5s ease-in-out;
+}
+
+.modal-container {
+  height: 480px;
+  width: 100%;
+  background-color: white;
+  position: fixed;
+  bottom: -500px;
+  z-index: 100;
+  transition: 0.5s ease-in-out;
+}
+
+.modal-container .modal-container {
+  position: relative;
+}
+
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.modal-container h6 {
+  text-align: center;
+  margin: 10px !important;
+}
+
+.modal-container .line {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal-container .imark {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 20px 10px !important;
+  padding: 15px !important;
+  display: flex;
+}
+
+.modal-container .imark span {
+  font-size: 50px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  font-weight: 600;
+  margin: 10px !important;
+}
+
+.modal-container .floor {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 10px !important;
+}
+
+.modal-container .floor span {
+  display: flex;
+  align-items: center;
+}
+.modal-container .floor span a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.modal-container .seat {
+  display: flex;
+  align-items: center;
+  margin: 20px 10px !important;
+}
+
+.modal-container .seat div {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  width: 100px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
+}
+
+.modal-container .seat div:last-of-type {
+  margin-left: 20px !important;
+}
+
+.modal-container .seat div p {
+  background-color: #026cdf;
+  color: white;
+  padding: 8px !important;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.seat span {
+  margin: 15px auto !important;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  display: block;
+}
