--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ nav {
   padding: 10px;
   position: relative;
   font-weight: medium;
+  width: 100%;
 }
 
 nav .icon {
@@ -192,6 +193,7 @@ section a {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.3);
+  color: white;
   border-radius: 50%;
   font-weight: 600;
   margin: 10px !important;
@@ -250,4 +252,31 @@ section a {
   background-color: white;
   border: 1px solid rgba(0, 0, 0, 0.2);
   display: block;
+}
+
+@media screen and (max-width: 900px) {
+  .modal-container .imark span {
+    font-size: 40px;
+    min-width: 70px;
+    height: 70px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .modal-container .imark span {
+    font-size: 30px;
+    min-width: 50px;
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .ticket-container {
+    width: 330px;
+  }
+  .modal-container .imark span {
+    font-size: 16px;
+    width: 50px;
+    height: 50px;
+  }
 }
